crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_set_multiple_props.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Source (:Person AS $0)
WriteOps:
  SetProperty $0.name = "Alice"
  SetProperty $0.age = 30
  SetProperty $0.active = true
