crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_skip_limit_combo.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Limit 10
  Skip 20
    Project [$0 AS n]
      Source (AS $0)
