crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_union_distinct_two_branches.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Union DISTINCT
  Project [$0.name AS name]
    Source (:Person AS $0)
  Project [$1.name AS name]
    Source (:Animal AS $1)
